--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto+Mono&display=swap");
 
+h2,
+p,
+h3,
+ul,
+ol {
+  margin: 0;
+  text-align: left;
+}
+
 body {
   font-family: "Roboto Mono", monospace;
   margin: 0;
@@ -8,7 +17,7 @@ body {
   align-items: center;
   justify-content: center;
   transition: background 0.5s ease-in-out;
-  background-color: #ffffff;
+  background-color: #4b4b4b72;
 }
 
 .carSmall {
@@ -17,11 +26,11 @@ body {
 }
 
 .carSmall:hover {
-  transform: scale(1.2);
+  transform: scale(1.4);
 }
 
 .background {
-  background-color: #4b4b4b4e;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 nav,
@@ -29,7 +38,7 @@ section,
 footer {
   margin: 20px;
   padding: 20px;
-  border: 1px solid #000000;
+  border: 3px solid #fff;
 }
 
 header {
@@ -37,8 +46,8 @@ header {
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background-color: #4b4b4b4e;
-  border: 1px solid #000000;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: 3px solid #fff;
   z-index: 1;
   margin: 0 20px;
 }
@@ -47,52 +56,23 @@ header h1 {
   margin: 0 auto;
 }
 
-header a img {
-  height: 50px;
-  border: 2px solid black;
-  border-radius: 10px;
-}
-
-form {
-  display: grid;
-  grid-gap: 10px;
-}
-
-.car {
-  height: 500px;
-}
-
-.car-description {
-  margin: 1em;
-}
-
-#e36,
-#e92,
-#s14,
-#r32,
-#g80 {
-  display: flex;
-}
-
 .carsListBig {
   display: flex;
   flex-direction: column;
   height: 600px;
   justify-content: space-between;
-  background-color: #4b4b4b4e;
-}
-
-.carsListSmall {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  background-color: #4b4b4b4e;
+  align-items: flex-end;
 }
 
 .carsListItem {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  margin-right: 750px;
+}
+
+.carsListItem h2 {
+  margin-right: 30px;
 }
 
 .carsListItemName {
@@ -107,48 +87,43 @@ form {
 
 @media print {
   header,
-  #voting-section,
   footer,
-  .carsListSmall {
+  form div {
     display: none;
   }
-  .background {
-    background-color: white;
-  }
-  body::before {
-    background-image: none;
-  }
-  #e36,
-  #e92,
-  #s14,
-  #r32,
-  #g80 {
-    flex-direction: column;
-    width: 100%;
-    max-height: 100vh;
-  }
-  #e36 img,
-  #e92 img,
-  #s14 img,
-  #r32 img,
-  #g80 img {
-    width: 100%;
-    height: auto;
-    object-fit: contain;
+  .carsListItem {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0;
   }
 }
+
+section h2 {
+  margin: 0 auto;
+}
+
 .enlarged-container {
   display: none;
-  position: fixed;
-  top: 50%;
-  left: 70%;
-  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 28%;
+  left: 55%;
   z-index: 1000;
+  width: 600px;
 }
 
 .enlarged-info {
   text-align: center;
   padding: 10px;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #4b4b4b59;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
+  border: 2px solid black;
+}
+
+#submit {
+  width: 500px;
+}
+
+#questions {
+  display: flex;
 }
